Added simple form and eddited private_params

--- a/app/views/ducks/new.html.erb
+++ b/app/views/ducks/new.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-      <h1>Create a new restaurant</h1>
-      <%= simple_form_for @restaurant do |f| %>
+      <h1>Create a new Duck</h1>
+      <%= simple_form_for @duck do |f| %>
         <%= f.input :name %>
         <%= f.input :description %>
-        <%= f.input :price %>
+        <%= f.input :price  %>
         <%-#<%= f.input :category, collection: Restaurant::CATEGORIES %>
         <%= f.submit class: 'btn btn-primary' %>
       <% end %>
