Added name, description, price, stat_time, end_time to view -> index.html.erb

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,1 +1,7 @@
-index.html.erb
+<% @bookings.each do |booking| %>
+  <%= booking.duck.name %>
+  <%= booking.duck.description %>
+  <%= booking.duck.price %>
+  <%= booking.start_time.strftime("%-d %b") %>
+  <%= booking.end_time.strftime("%-d %b") %>
+<% end %>
