--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 
           <div class="title-value">
             <div class="col-xs-12">
-              <h3>Did you ever struggle with your code?</h3>
+              <h3>Do you ever struggle with your code?</h3>
             </div>
           </div>
 
