--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,21 +1,22 @@
 <div class="container" style="margin: 20px">
-  <div class="card" style="width: 18rem;">
-      <img src="https://s3.distributorcentral.com/uploads/6/7/675EF039D810396DCC3D57CF6138224B.jpg" class="card-img-top" alt="..." />
-      <div class="card-product-infos">
-        <div class="card-body">
-            <% @bookings.each do |booking| %>
-             <h5 class="card-title"><%= booking.duck.name %></h5>
-              <h3><%= booking.duck.description %></h3>
-              <p class="card-text"><%= booking.duck.price %></p>
-              <p><%= booking.start_time.strftime("%-d %b") %></p>
-              <p><%= booking.end_time.strftime("%-d %b") %></p>
-            <% end %>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+  <div class="row">
+    <% @bookings.each do |booking| %>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"><%= booking.duck.name %></h5>
+            <img src="https://s3.distributorcentral.com/uploads/6/7/675EF039D810396DCC3D57CF6138224B.jpg" style="width: 150px;" alt="">
+            <h6><%= booking.duck.description %></h6>
+            <p class="card-text"><%= booking.duck.price %></p>
+            <p><%= booking.start_time.strftime("%-d %b") %></p>
+            <p><%= booking.end_time.strftime("%-d %b") %></p>
+            <a href="#" class="btn btn-primary">See Booking</a>
+          </div>
+        </div>
       </div>
-    </div>
+    <% end %>
   </div>
 </div>
-
 
 
 
