--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,25 +1,26 @@
 .banner {
   background-size: cover;
   background-position: center;
-
-  height: 300px;
+  padding: 150px 0;
 }
 
-.h1 {
-  margin: 0;
+.banner h1 {
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 50px;
   font-weight: bold;
-  align-items: center;
-  text-align: center;
 }
 
-.h3{
+.banner p {
   font-size: 30px;
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  align-items: center;
-  text-align: center;
+}
+
+.banner-content {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  justify-content-center: center;
 }
