--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,6 +6,7 @@
   height: 100px;
   padding: 0px 50px;
   color: black;
+  border-top: 1px solid lightgray;
 }
 
 .footer-links {
@@ -25,3 +26,6 @@
   opacity: 1;
 }
 
+.footer .fa-heart {
+  color: #D23333;
+}
