--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -2,7 +2,6 @@
 .body {
   font-size: 14px;
   line-height: 1.42857143;
-
 }
 
 
@@ -10,13 +9,16 @@
 .container {
     padding-right: 20px;
     padding-left: 20px;
-    margin: 30px;
+    margin: 30px auto;
+    padding: 30px;
 }
 
 .value{
-  border: 1px solid black;
-  border-radius: 4px;
-  margin: 30px
+  border-radius: 3px;
+  border: 1px solid rgb(240,240,240);
+  box-shadow: 1px 1px 1px 2px #0E6655;
+  margin: 30px;
+  padding: 30px;
 }
 
 .title-value {
@@ -24,9 +26,11 @@
   margin: 15px 10px;
 }
 
-.untertitel-value {
+.untertitel-value h4 {
   text-align: center;
   margin: 15px 10px;
+  color: gb(240,240,240);
+  text-decoration: none;
 }
 
 .row {
