--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,7 +1,6 @@
-
+<div><span>Here are your Duck Bookings </span></div>
 <div class="container">
-  <h1><strong>Duck Bookings</strong></h1>
-  <br>
+<br>
   <div class="row">
     <% @bookings.each do |booking| %>
       <div class="col-md-4">
@@ -22,5 +21,6 @@
 </div>
 <br>
 <br>
+
 
 
