home page and footer css

--- a/app/assets/stylesheets/bookings/_index.scss
+++ b/app/assets/stylesheets/bookings/_index.scss
@@ -18,7 +18,7 @@
   box-shadow: 1px 2px 31px -18px rgba(148,148,148,1);
   box-shadow: 1px 2px 31px -18px rgba(148,148,148,1);
   box-shadow: 1px 2px 31px -18px rgba(148,148,148,1);
-  background-color: #FCF4E9;
+  background-color: #F4F4F4;
   border-image-slice: 1;
   border-width: 1px;
   border-image-source: linear-gradient(to left, #ffffff, #ffffff);
