--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,51 +1,41 @@
-<div class="banner d-flex justify-content-center" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(https://images.unsplash.com/photo-1582845512747-e42001c95638?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80">
-      <div class="banner-content">
-        <h1>Airducks</h1>
-        <p>Coding with a friend</p>
+
+<div class="banner d-flex justify-content-center" >
+  <div class="banner-content">
+    <h1 class="circle">Airducks</h1>
+  </div>
+</div>
+
+
+  <div class="container container-value">
+    <div class="title-value">
+      <div class="col-xs-12">
+        <h2 class="p-banner">Can I be Your Rubber Duck?</h2>
+        <h4> Debugging Code With a Friend</h4>
       </div>
+    </div>
+
+  <div class="row row-value">
+    <div class="col-xs-12 col-md-6">
+      <div class="value">
+        <h4 class="color-orange">How does it work?</h4>
+        <p>Our ducks force you to look at the problem from different perspectives and will provide you with a deeper understanding for your code.</p>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+      <div class="value">
+          <h4 class="color-orange">You're convinced?</h4>
+            <p>Perfect! Than rent one of our affordable ducks that have graduated with a technical degree from some of the world's leading universities.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="untertitel-value">
+    <div class="col-xs-12">
+      <h4><%= link_to "Let's start, find a duck!", ducks_path %></h4>
+    </div>
+  </div>
+  </div>
 </div>
 
-<div class="container-page">
-        <div class="container container-value">
-
-          <div class="title-value">
-            <div class="col-xs-12">
-              <h3>Do you ever struggle with your code?</h3>
-            </div>
-          </div>
-
-          <div class="row row-value">
-            <div class="col-xs-12 col-md-6">
-              <div class="value">
-                <h4>How does it work?</h4>
-                <p>Our ducks force you to look at the problem from different perspectives and will provide you with a deeper understanding for your code.</p>
-              </div>
-            </div>
-
-            <div class="col-xs-12 col-md-6">
-              <div class="value">
-                <h4>You're convinced?</h4>
-                <p>Perfect! Than rent one of our affordable ducks that have graduated with a technical degree from some of the world's leading universities.</p>
-              </div>
-            </div>
-          </div>
-
-            <div class="untertitel-value">
-              <div class="col-xs-12">
-                <h4><%= link_to "Let's start, find a duck!", ducks_path %></h4>
-              </div>
-            </div>
-          </div>
-
-            <div class="footer">
-              <div class="footer-links">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-              </div>
-              <div class="footer-copyright">
-                This app is made with <i class="fas fa-heart"></i> and Airducks at Le Wagon
-              </div>
-            </div>
-</div>
 
