--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,10 @@
 .banner {
   background-size: cover;
+  background-image: url("https://miro.medium.com/max/9728/1*K5KVUeBibaJJ2tdVPTKPsw.jpeg");
+  background-color: rgba(50, 50, 50, 1);
   background-position: center;
-  padding: 150px 0;
+  padding: 80px 0;
+  height: 500px;
 }
 
 .banner h1 {
