--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,29 +1,29 @@
 .footer {
-  background: #F4F4F4;
+  background: black;
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
+
   height: 100px;
   padding: 0px 50px;
   color: black;
   border-top: 1px solid lightgray;
-}
 
-.footer-links {
-  display: flex;
-  align-items: center;
 }
 
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  align-items: center;
+  color: rgb(254, 127, 45);
+  opacity: 1;
   text-decoration: none;
+  text-align: center;
   font-size: 24px;
   padding: 0px 10px;
+
 }
 
 .footer-links a:hover {
-  opacity: 1;
+  opacity: 0.5;
 }
 
 .footer .fa-heart {
