--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -4,19 +4,21 @@
   line-height: 1.42857143;
 }
 
-
-
 .container {
     padding-right: 20px;
     padding-left: 20px;
     margin: 30px auto;
     padding: 30px;
+      position: relative;
+  top: -60px;
+  right: 0;
+  left: 0px;
 }
 
-.value{
+.value {
   border-radius: 3px;
-  border: 1px solid rgb(240,240,240);
-  box-shadow: 1px 1px 1px 2px #0E6655;
+  border: 1px solid rgba(200,200,200, 0.2);
+  background-color: rgba(200,200,200, 0.2);
   margin: 30px;
   padding: 30px;
 }
@@ -39,9 +41,46 @@
     text-align: center;
 }
 
+h1{
+  position: relative;
+  top:-60px;
+  left: 170px;
+}
+
+.circle {
+  padding-top: 80px;
+  padding-left: 10px;
+  height: 240px;
+  width: 240px;
+  background-color: rgb(254, 127, 45);
+  border-style: solid;
+  border-color: rgb(254, 127, 45);
+  border-width: 10px;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  top: -180px;
+  left: 190px;
+  box-shadow:  inset 0 0 10px #000000;
+  box-shadow: inset 0 0 10px #000000;
+  box-shadow: inset 0 0 10px #000000;
+}
 
 
+h4 {
+  font-family: 'Krona One', sans-serif;
+  text-align: center;
+}
 
+a {
+  color: black;
+}
 
+a:hover{
+    color: rgba(254, 127, 30, 0.7);
+   text-decoration: none;
+}
 
-
+.color-orange {
+   color: rgb(254, 127, 45);
+}
