--- a/app/views/ducks/index.html.erb
+++ b/app/views/ducks/index.html.erb
@@ -1,16 +1,15 @@
-<h1>Index</h1>
+
 <% @ducks.each do |duck| %>
   <%= link_to duck_path(duck) do %>
     <div class="duck-card">
-      <img src="https://images.unsplash.com/photo-1559715541-5daf8a0296d0" width=250px/>
+      <%= cl_image_tag duck.photo.key, height: 300, width: 250, crop: :fill %>
       <div class="duck-card-info">
         <h2>Duck Name <%= duck.name %></h2>
         <p>Description <%= duck.description %></p>
-        <p>Price <%= duck.price %></p>  
-        <p>User_id <%= duck.user_id %></p>
-        <p>Created_at <%= duck.created_at %></p>
-        <p>updated_at <%= duck.updated_at %></p>
+        <p>Price <%= duck.price %></p>
+        <p>User <%= duck.user.email %></p>
+        <p>About <%= time_ago_in_words duck.created_at %> ago </p>
       </div>
     </div>
-  <% end %>  
+  <% end %>
 <% end %>
