--- a/app/views/ducks/new.html.erb
+++ b/app/views/ducks/new.html.erb
@@ -6,7 +6,7 @@
         <%= f.input :name %>
         <%= f.input :description %>
         <%= f.input :price %>
-        <%= cl_image_tag("THE_IMAGE_ID_FROM_LIBRARY"), width: 400, height: 300, crop: :fill) %>
+        <%= f.input :photo, as: :file %>
         <%-#<%= f.input :category, collection: Restaurant::CATEGORIES %>
         <%= f.submit class: 'btn btn-primary' %>
       <% end %>
