--- a/app/assets/stylesheets/bookings/_index.scss
+++ b/app/assets/stylesheets/bookings/_index.scss
@@ -1,7 +1,7 @@
 .card {
   margin-top: 15px;
   margin-bottom: 15px;
-  border-color: rgba(254, 127, 45, 0.1);
+  border-color: rgba(250, 250,250, 0.1);
   border-radius: 7px;
   border-style: solid;
   border-width: 2px;
@@ -9,7 +9,7 @@
 }
 
 .container {
-  padding-top: 30px;
+  padding-top: 0px;
   padding-left: 60px;
   padding-right: 60px;
   border-radius: 10px;
@@ -54,8 +54,8 @@ h3 {
     font-family:courier;
     font-weight:bold;
     position:relative;
-    top:18px;
-    left: 270px;
+    top:-10px;
+    left: 120px;
 }
 
 div{
@@ -89,3 +89,9 @@ h6 {
   color: #506D4E;
   border-color: #506D4E;
 }
+
+.box-shadow {
+  box-shadow: -2px 15px 4px -11px rgba(0,0,0,0.42);
+  box-shadow: -2px 15px 4px -11px rgba(0,0,0,0.42);
+}
+
