--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -10,7 +10,7 @@
     margin: 30px auto;
     padding: 30px;
       position: relative;
-  top: -60px;
+  top: -40px;
   right: 0;
   left: 0px;
 }
@@ -48,22 +48,21 @@ h1{
 }
 
 .circle {
-  padding-top: 80px;
+  padding-top: 60px;
   padding-left: 10px;
-  height: 240px;
-  width: 240px;
-  background-color: rgb(254, 127, 45);
+  height: 170px;
+  width: 170px;
+  background-color: white;
   border-style: solid;
-  border-color: rgb(254, 127, 45);
+  border-color: rgb(250, 127, 45);
   border-width: 10px;
   border-radius: 50%;
   display: inline-block;
   position: relative;
-  top: -180px;
-  left: 190px;
-  box-shadow:  inset 0 0 10px #000000;
-  box-shadow: inset 0 0 10px #000000;
-  box-shadow: inset 0 0 10px #000000;
+  top: -220px;
+  left: 210px;
+
+
 }
 
 
@@ -74,10 +73,11 @@ h4 {
 
 a {
   color: black;
+  text-align: center;
 }
 
 a:hover{
-    color: rgba(254, 127, 30, 0.7);
+    color: rgba(50, 50, 50, 0.7);
    text-decoration: none;
 }
 
