--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,6 +1,8 @@
-<div><span>Here are your Duck Bookings </span></div>
-<div class="container">
+<div class="container" style="margin-top: 30px; ">
+  <div><span class="box-shadow">Here are your Duck Bookings </span></div>
 <br>
+<br>
+
   <div class="row">
     <% @bookings.each do |booking| %>
       <div class="col-md-4">
@@ -19,6 +21,7 @@
     <% end %>
   </div>
 </div>
+<h4><%= link_to "Book another duck!", ducks_path %></h4>
 <br>
 <br>
 
