--- a/app/views/ducks/new.html.erb
+++ b/app/views/ducks/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container" style=" align-items: center; margin-top:30px;" >
   <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1" style="padding-bottom: 100px;">
       <h1>Create a new Duck</h1>
       <%= simple_form_for @duck do |f| %>
         <%= f.input :name %>
