--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
 
 <div class="banner d-flex justify-content-center" >
+  <div style:"border-width  "></div>
   <div class="banner-content">
-    <h1 class="circle">Airducks</h1>
+    <h1 style="font-size: 32px; color:rgb(254, 127, 45); " class="circle">Airducks</h1>
   </div>
 </div>
 
@@ -9,7 +10,7 @@
   <div class="container container-value">
     <div class="title-value">
       <div class="col-xs-12">
-        <h2 class="p-banner">Can I be Your Rubber Duck?</h2>
+        <h2 class="p-banner" style="padding-top: 20px;">Can I be Your Rubber Duck?</h2>
         <h4> Debugging Code With a Friend</h4>
       </div>
     </div>
