--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -52,13 +52,13 @@ h1{
   padding-left: 10px;
   height: 170px;
   width: 170px;
-  background-color: white;
+  background-color: #FFDA45;
   border-style: solid;
-  border-color: rgb(250, 127, 45);
+  border-color: white;
   border-width: 10px;
   border-radius: 50%;
   display: inline-block;
-  position: relative;
+  position: fixed;
   top: -220px;
   left: 210px;
 
