--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="banner d-flex justify-content-center" >
   <div style:"border-width  "></div>
   <div class="banner-content">
-    <h1 style="font-size: 32px; color:rgb(254, 127, 45); " class="circle">Airducks</h1>
+    <h1 style="font-size: 32px; color:white; " class="circle">Airducks</h1>
   </div>
 </div>
 
