--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
   background-size: cover;
-  background-image: url('home-banner.jpeg');
+  background-image: image-url('home-banner.jpeg');
   background-color: rgba(50, 50, 50, 1);
   background-position: center;
   padding: 80px 0;
