--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
           <%= link_to "Ducks", ducks_path, class: "nav-link" %>
         </li>
         <li class="nav-item active">
-          <%= link_to "Create Duck", ducks_new_path, class: "nav-link" %>
+          <%= link_to "Create Duck", new_duck_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
