--- a/app/views/ducks/show.html.erb
+++ b/app/views/ducks/show.html.erb
@@ -2,20 +2,23 @@
 <%= @duck.name %>
 <%= cl_image_tag @duck.photo.key, height: 300, width: 400, crop: :fill %>
 
-<% if @booking%>
-  <%= simple_form_for [@booking, @review] do |f| %>
-    <%= f.input :content %>
-    <%= f.input :rating %>
-    <%= f.submit class: 'btn btn-primary' %>
-    <% end %>
-<% end %>
+<div class="container">
+  <h4 style="color: orange; padding-top: 15px; ">Add a review</h4>
+  <% if @booking%>
+    <%= simple_form_for [@booking, @review] do |f| %>
+      <%= f.input :content %>
+      <%= f.input :rating %>
+      <%= f.submit class: 'btn btn-primary' %>
+      <% end %>
+  <% end %>
 
 
 
-<% @duck.reviews.each do |review| %>
-<% @review.rating.to_i.times do  %>
- <span class="glyphicon glyphicon-star"></span>
-<% end %>
-  <li style="list-style: none; "><%= review.content %></li>
-  <li style="list-style: none;""><span class=”glyphicon glyphicon-star”></span><%= review.rating %></li>
-<% end %>
+  <% @duck.reviews.each do |review| %>
+  <% @review.rating.to_i.times do  %>
+   <span class="glyphicon glyphicon-star"></span>
+  <% end %>
+    <li style="list-style: none; "><%= review.content %></li>
+    <li style="list-style: none;"><span class=”glyphicon glyphicon-star”></span><%= review.rating %></li>
+  <% end %>
+</div>
