--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -9,7 +9,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title"> <strong><%= booking.duck.name %></strong> </h5>
-            <img src="https://s3.distributorcentral.com/uploads/6/7/675EF039D810396DCC3D57CF6138224B.jpg" style="width: 150px;" alt="">
+            <%= cl_image_tag booking.duck.photo.key, height: 300, width: 200, crop: :fill %>
             <h6><%= booking.duck.description %></h6>
             <p class="card-text"><strong>Price: </strong> <%= booking.duck.price %>€</p>
             <p><strong> Start date: </strong> <%=booking.start_time.strftime("%-d %b") %></p>
