--- a/app/views/ducks/show.html.erb
+++ b/app/views/ducks/show.html.erb
@@ -1,5 +1,21 @@
-<h1>What a nice duck</h1>
-<%= @duck.name %>
-<%= cl_image_tag @duck.photo.key, height: 300, width: 400, crop: :fill %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-8 offset-2">
 
-<%= link_to "Booking", new_duck_booking_path(@duck) %>
+
+      <%= @duck.name %>
+      <%= cl_image_tag @duck.photo.key, height: 300, width: 400, crop: :fill %>
+
+      <%= link_to "Booking", new_duck_booking_path(@duck) %>
+
+      <% if policy(@duck).edit? %>
+        <%= link_to "Edit", edit_duck_path(@duck) %>
+      <% end %>
+
+      <% if policy(@duck).destroy? %>
+        <%= link_to "Destroy", duck_path(@duck), method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
+
+    </div>
+  </div>
+</div>
