--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,8 +7,20 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
+    <div class="form-inline">
+      <%= form_tag ducks_path, method: :get do %>
+        <%= text_field_tag :search,
+          params[:search],
+          class: "form-control",
+          placeholder: " "
+        %>
+      <%= submit_tag "Search", class: "btn btn-primary" %>
+    <% end %>
+  </div>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
