--- a/app/views/ducks/show.html.erb
+++ b/app/views/ducks/show.html.erb
@@ -1,5 +1,5 @@
-
-<%# <div class="container-fluid">
+<%# 
+<div class="container-fluid">
   <div class="row">
     <div class="col-8 offset-2">
      
@@ -15,9 +15,11 @@
       <h2><strong><%= @duck.name %></strong></h2>
       <p><%= @duck.description %></p>
       <p><strong>Price: </strong> <%= @duck.price %></p>
-      <%= link_to "Booking", new_duck_booking_path(@duck) %>
-
-     <% if policy(@duck).edit? %>
+      <div class="btn btn-primary">
+      <%= link_to "Book This Duck", new_duck_booking_path(@duck) %>
+       
+      </div>
+      <% if policy(@duck).edit? %>
         <%= link_to "Edit", edit_duck_path(@duck) %>
       <% end %>
 
@@ -47,7 +49,3 @@
    <li style="list-style: none;"><span class=”glyphicon glyphicon-star”></span><%= review.rating %></li>
   <% end %>
 </div>
-
-
-
-
