--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,20 @@
 
 <div class="banner d-flex justify-content-center" >
   <div class="banner-content">
-    <h1 style="font-size: 32px; color:white;" class="circle">Airducks</h1>
+    <div class="white-box">
+      <div class="ball"></div>
+      <h1 style="font-size: 32px; color:white;" class="circle">Airducks</h1>
+      </div>
+    </div>
   </div>
 </div>
-
 
   <div class="container container-value">
     <div class="title-value">
       <div class="col-xs-12">
+        <br>
+        <h4 class="typed"></h4>
         <h2 class="p-banner" style="padding-top: 20px;">Can I be Your Rubber Duck?</h2>
-        <h4> Debugging Code With a Friend</h4>
       </div>
     </div>
 
