--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -45,24 +45,48 @@ h1{
   position: relative;
   top:-60px;
   left: 170px;
+  color: rgba(250, 250, 250, 1);
 }
 
 .circle {
   padding-top: 60px;
-  padding-left: 10px;
-  height: 170px;
-  width: 170px;
-  background-color: #FFDA45;
+  padding-left: 12px;
+  height: 200px;
+  width: 200px;
+  background-color: rgba(255,218,69, 1);
   border-style: solid;
   border-color: white;
-  border-width: 10px;
+  border-width: 23px;
   border-radius: 50%;
   display: inline-block;
-  position: fixed;
-  top: -220px;
-  left: 210px;
+  position: absolute;
+  top: 70px;
+  left: -20px;
+
 }
 
+.white-box {
+  height: 200px;
+  width: 200px;
+  background-color: rgba(255,255,255,1 );
+  border-style: solid;
+  border-color: white;
+  border-width: 20px;
+  border-radius: 15px;
+position: relative;
+ top: -170px;
+  left: 210px;
+
+}
+
+
+
+
+
+@keyframes bounce {
+  from{ transform: translate3d(0, 0, 0);     }
+  to   { transform: translate3d(0, 260px, 0); }
+}
 
 h4 {
   font-family: 'Krona One', sans-serif;
