--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
     <div class="title-value">
       <div class="col-xs-12">
         <br>
-        <h4 class="typed"></h4>
+        <div><h4 class="typed"></h4></div>
         <h2 class="p-banner" style="padding-top: 20px;">Can I be Your Rubber Duck?</h2>
       </div>
     </div>
