--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,16 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.dropdown {
+  padding-left: 16px;
+}
+
+#navbar-left {
+  justify-content: flex-start;
+  padding-left: 0px;
+}
+
+#navbar-right {
+  justify-content: flex-end;
+}
