--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,16 @@
 // Specific CSS for your home-page
+.white-box {
+  display: flex;
+  padding: 0px;
+}
+.ball {
+  display: flex;
+  padding: 0px;
+}
+
+.circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px;
+}
