--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
-<div class="banner d-flex justify-content-center" >
+<div class="banner">
   <div class="banner-content">
     <div class="white-box">
       <div class="ball"></div>
@@ -11,14 +11,14 @@
 
   <div class="container container-value">
     <div class="title-value">
-      <div class="col-xs-12">
+      <div class="col-xs-12 no-padding-left">
         <br>
-        <div><h4 class="typed"></h4></div>
+        <div class="no-padding-left"><h4 class="typed"></h4></div>
         <h2 class="p-banner" style="padding-top: 20px;">Can I be Your Rubber Duck?</h2>
       </div>
     </div>
 
-  <div class="row row-value">
+  <div class="row row-value no-padding-left">
     <div class="col-xs-12 col-md-6">
       <div class="value">
         <h4 class="color-orange">How does it work?</h4>
@@ -34,8 +34,8 @@
     </div>
   </div>
 
-  <div class="untertitel-value">
-    <div class="col-xs-12">
+  <div class="untertitel-value no-padding-left">
+    <div class="col-xs-12 no-padding-left">
       <h4><%= link_to "Let's start, find a duck!", ducks_path %></h4>
     </div>
   </div>
