--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container" style="margin-top: 30px; ">
-  <div><span class="box-shadow">Here are your Duck Bookings </span></div>
+<div class="container" style="margin-top: 30px;">
+  <div class="box-span"><span class="box-shadow">Here are your Duck Bookings</span></div>
 <br>
 <br>
 
@@ -10,11 +10,19 @@
           <div class="card-body">
             <h5 class="card-title"> <strong><%= booking.duck.name %></strong> </h5>
             <%= cl_image_tag booking.duck.photo.key, height: 300, width: 200, crop: :fill %>
-            <h6><%= booking.duck.description %></h6>
+            <h6>
+              <% if booking.duck.description.size > 120 %>
+                <%= "#{booking.duck.description[0,120]}..." %>
+              <% else %>
+                <%= booking.duck.description %>
+              <% end %>
+            </h6>
             <p class="card-text"><strong>Price: </strong> <%= booking.duck.price %>€</p>
             <p><strong> Start date: </strong> <%=booking.start_time.strftime("%-d %b") %></p>
             <p><strong> End date: </strong> <%= booking.end_time.strftime("%-d %b") %></p>
-            <a href="#" class="btn btn-primary">See Booking</a>
+            <div class="btn btn-primary">
+              <%= link_to "See Booking", booking_path(booking) %>
+            </div>
           </div>
         </div>
       </div>
@@ -24,6 +32,3 @@
 <h4><%= link_to "Book another duck!", ducks_path %></h4>
 <br>
 <br>
-
-
-
