Updated some of the css stuff at snails pace

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,11 @@
-<div class="container" style="margin-top: 30px;">
+<div class="pages-banner d-flex justify-content-center" >
+  <div class="pages-banner-content">
+    <div class="pages-white-box">
+    </div>
+  </div>
+</div>
+
+<div class="container" style="margin-top: 15px;">
   <div class="box-span"><span class="box-shadow">Here are your Duck Bookings</span></div>
 <br>
 <br>
