--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -2,7 +2,7 @@
   overflow: hidden;
   height: auto;
   background: $light-gray;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
   padding: 50px;
@@ -35,4 +35,8 @@
 
 .card-product .card-product-infos {
   padding: 16px;
+}
+
+.btn {
+  color: white;
 }
