--- a/app/views/ducks/new.html.erb
+++ b/app/views/ducks/new.html.erb
@@ -1,4 +1,11 @@
-<div class="container" style=" align-items: center; margin-top:30px;" >
+<div class="pages-banner d-flex justify-content-center" >
+  <div class="pages-banner-content">
+    <div class="pages-white-box">
+    </div>
+  </div>
+</div>
+
+<div class="container" style=" align-items: center; margin-top:15px;" >
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1" style="padding-bottom: 30px; padding-top: 10px;">
         <div style="padding-right: 250px; "><span class="box-shadow">Create Your Own Duck </span></div>
