--- a/app/views/ducks/edit.html.erb
+++ b/app/views/ducks/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container" style=" align-items: center; margin-top:30px;" >
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1" style="padding-bottom: 30px; padding-top: 10px;">
-        <div style="padding-right: 250px; "><span class="box-shadow">Create Your Own Duck </span></div>
+        <div style="padding-right: 250px; "><span class="box-shadow">Edit Your Duck </span></div>
       <div style=" padding-left: 180px; padding-top: 20px;  "> <%= simple_form_for @duck do |f| %>
         <%= f.input :name %>
         <%= f.input :description %>
