--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -5,7 +5,8 @@
   // box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
-  padding: 50px;
+  padding: 50px 0px;
+
   flex: auto;
   border-radius: 7px;
   justify-content: space-between;
