--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style=" align-items: center; margin-top:30px;" >
+<div class="container" style=" align-items: center; margin-top:30px; height: 100vh;" >
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1" style="padding-bottom: 30px; padding-top: 10px;">
         <div style="padding-right: 250px; "><span class="box-shadow">Book <%= @duck.name %> now </span></div>
