Fixes title header and tidies css
Co-authored-by: dmcarmo <d.m.carmo@gmail.com>

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,6 @@
 @import "navbar";
 @import "footer";
 @import "banner";
-@import "home";
 @import "card-product";
 @import "pages-banner";
+// _show.scss and buttons.scss not imported?????
