--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,9 @@
+<div id="title-header">
+  <div class="title-circle"> 
+    <p>CodeQuacks</p>
+  </div>
+</div>
+
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div id="navbar-left">
     <ul class="navbar-nav">
@@ -49,3 +55,7 @@
     </div>
   </div>
 </div>
+
+  
+
+  
