--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,12 +15,15 @@
   left: 0px;
 }
 
-.value {
+.row {
+  text-align: center;
+}
+
+.text-box {
   border-radius: 3px;
   border: 1px solid rgba(200,200,200, 0.2);
   background-color: rgba(200,200,200, 0.2);
-  margin: 30px;
-  padding: 30px;
+  padding-top: 16px;
 }
 
 .title-value {
@@ -34,12 +37,6 @@
   margin: 15px 10px;
   color: gb(240,240,240);
   text-decoration: none;
-}
-
-.row {
-  margin-right: -15px;
-  margin-left: -15px;
-  text-align: center;
 }
 
 .no-padding-left {
