Fixes design issues with devise pages
Co-authored-by: David Carmo <dmcarmo@gmail.com>

--- a/app/assets/stylesheets/components/_pages-banner.scss
+++ b/app/assets/stylesheets/components/_pages-banner.scss
@@ -26,7 +26,7 @@
   margin: auto;
   width: 50%;
   padding: 10px;
-  justify-content-center: center;
+  justify-content: center;
 }
 
 .pages-banner1 {
