--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,25 +11,22 @@
       <div class="no-padding-left">
         <h4 class="typed"></h4>
       </div>
-      <h2 class="p-banner" style="padding-top: 20px;">Can I be Your Rubber Duck?</h2>
+      <h2 class="p-banner pt-3">Can I be Your Rubber Duck?</h2>
     </div>
   </div>
-
   <div class="row row-value justify-content-around no-padding-left">
     <div class="col-xs-12 col-md-5 text-box">
       <h4 class="color-orange">How does it work?</h4>
       <p>Our ducks force you to look at the problem from different perspectives and will provide you with a deeper understanding for your code.</p>
     </div>
-
     <div class="col-xs-12 col-md-5 text-box">
       <h4 class="color-orange">You're convinced?</h4>
       <p>Perfect! Than rent one of our affordable ducks that have graduated with a technical degree from some of the world's leading universities.</p>
     </div>
   </div>
-
-  <div class="untertitel-value no-padding-left">
+  <div class="no-padding-left">
     <div class="col-xs-12 no-padding-left">
-      <h4><%= link_to "Let's start, find a duck!", ducks_path %></h4>
+      <h4 class="p-banner text-center mt-4"><%= link_to "Let's start, find a duck!", ducks_path %></h4>
     </div>
   </div>
 </div>
