--- a/app/views/ducks/new.html.erb
+++ b/app/views/ducks/new.html.erb
@@ -4,22 +4,24 @@
     </div>
   </div>
 </div>
-
-<div class="container" style=" align-items: center; margin-top:15px;" >
-  <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1" style="padding-bottom: 30px; padding-top: 10px;">
-        <div style="padding-right: 250px; "><span class="box-shadow">Create Your Own Duck </span></div>
-      <div style=" padding-left: 180px; padding-top: 20px;  "> <%= simple_form_for @duck do |f| %>
-        <%= f.input :name %>
-        <%= f.input :description %>
-        <%= f.input :price %>
-        <%= f.input :photo, as: :file %>
-        <%-#<%= f.input :category, collection: Restaurant::CATEGORIES %>
-        <br>
-        <br>
-        <%= f.submit class: 'btn btn-primary' %>
-      <% end %>
-    </div>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+      <div class="d-flex justify-content-center">
+        <div class="container-title shadow bg-white rounded">Create Your Own Duck</div>
+      </div>
+      <div>
+        <%= simple_form_for @duck do |f| %>
+          <%= f.input :name %>
+          <%= f.input :description %>
+          <%= f.input :price %>
+          <%= f.input :photo, as: :file %>
+          <%-#<%= f.input :category, collection: Restaurant::CATEGORIES %>
+          <br>
+          <br>
+          <%= f.submit class: 'btn btn-primary' %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
