--- a/app/views/ducks/show.html.erb
+++ b/app/views/ducks/show.html.erb
@@ -1,12 +1,15 @@
+<!--
 <div class="pages-banner d-flex justify-content-center" >
   <div class="pages-banner-content">
     <div class="pages-white-box">
     </div>
   </div>
 </div>
+-->
 
-<div class="container" style="margin-top: 15px;">
-<br>
+<!-- disable navbar and footer -->
+
+<div class="container">
   <div class="card-product">
     <%= cl_image_tag @duck.photo.key, height: 300, width: 400, crop: :fill %>
     <div class="card-product-infos">
@@ -30,7 +33,6 @@
   </div>
 </div>
 
-
 <div class="container" >
   <h2 style=" text-align: center; padding-top: 15px;">Add a review</h2>
   <% if @booking%>
@@ -46,4 +48,3 @@
     <li style="list-style: none; "><%= review.content %></li>
   <% end %>
 </div>
-
