Cleans html and css code across all views
Co-authored-by: David Wylie <wyliedavidpaul@gmail.com>

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,6 +3,8 @@
 @import "avatar";
 @import "banner";
 @import "card-product";
+@import "card";
+@import "container";
 @import "footer";
 @import "navbar";
 @import "pages-banner";
