--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,16 +1,21 @@
-<div class="container" style=" align-items: center; margin-top:30px; height: 100vh;" >
-  <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1" style="padding-bottom: 30px; padding-top: 10px;">
-        <div style="padding-right: 250px; "><span class="box-shadow">Book <%= @duck.name %> now </span></div>
-      <div style=" padding-left: 180px; padding-top: 20px;  ">
-        <%= simple_form_for [@duck, @booking] do |f| %>
-          <%= f.input :start_time %>
-          <%= f.input :end_time %>
-          <br>
-          <br>
-          <%= f.submit class: 'btn btn-primary' %>
-      <% end %>
+<div class="pages-banner d-flex justify-content-center" >
+  <div class="pages-banner-content">
+    <div class="pages-white-box">
     </div>
+  </div>
+</div>
+
+<div class="container" >
+  <div class="row">
+    <div class="col">
+      <div class="d-flex justify-content-center">
+        <div class="container-title shadow bg-white rounded">Book <%= @duck.name %> now</div>
+      </div>
+      <%= simple_form_for [@duck, @booking] do |f| %>
+        <%= f.input :start_time %>
+        <%= f.input :end_time %>
+        <%= f.submit class: 'btn btn-primary mt-3' %>
+      <% end %>
     </div>
   </div>
 </div>
