--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 30px;">
+<div class="container">
 <br>
   <div class="card-product">
     <%= cl_image_tag @booking.duck.photo.key, height: 300, width: 400, crop: :fill %>
