--- a/app/views/ducks/new.html.erb
+++ b/app/views/ducks/new.html.erb
@@ -16,10 +16,7 @@
           <%= f.input :description %>
           <%= f.input :price %>
           <%= f.input :photo, as: :file %>
-          <%-#<%= f.input :category, collection: Restaurant::CATEGORIES %>
-          <br>
-          <br>
-          <%= f.submit class: 'btn btn-primary' %>
+          <%= f.submit class: 'btn btn-primary mt-3' %>
         <% end %>
       </div>
     </div>
