Redesigns new duck form
Co-authored-by: David Carmo <dmcarmo@gmail.com>

--- a/app/views/ducks/new.html.erb
+++ b/app/views/ducks/new.html.erb
@@ -4,18 +4,18 @@
     </div>
   </div>
 </div>
-<div class="container">
+<div class="container mt-3">
   <div class="row justify-content-center">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-      <div class="d-flex justify-content-center">
+    <div class="d-flex flex-column align-items-center col">
+     
         <div class="container-title shadow bg-white rounded">Create Your Own Duck</div>
-      </div>
-      <div>
-        <%= simple_form_for @duck do |f| %>
-          <%= f.input :name %>
-          <%= f.input :description %>
-          <%= f.input :price %>
-          <%= f.input :photo, as: :file %>
+    
+      <div class="w-50">
+        <%= bootstrap_form_for @duck do |f| %>
+          <%= f.text_field :name %>
+          <%= f.text_area :description %>
+          <%= f.number_field :price %>
+          <%= f.file_field :photo %>
           <%= f.submit class: 'btn btn-primary mt-3' %>
         <% end %>
       </div>
