--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container mt-3">
   <div class="d-flex justify-content-center">
     <div class="container-title shadow bg-white rounded">Here are your Duck Bookings</div>
   </div>
