--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container mt-3">
   <div class="d-flex justify-content-center">
     <div class="profile"></div>
   </div>
