Upgrades bootstrap to version 5.0 Also fixes issues with new bootstrap syntax in modals and dropdown menu Co-authored-by: David Wylie <wyliedavidpaul@gmail.com>

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -13,6 +15,11 @@
 
 .dropdown {
   padding-left: 16px;
+}
+
+.dropdown-item {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 #navbar-left {
