--- a/app/views/ducks/_show.html.erb
+++ b/app/views/ducks/_show.html.erb
@@ -1,9 +1,9 @@
-<div class="modal fade" id="duckModal<%= duck.id %>" tabindex="-1" role="dialog" aria-labelledby="duckModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="duckModal<%= duck.id %>" tabindex="-1" role="dialog" aria-labelledby="duckModalCenterTitle">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title w-100 text-center" id="duckModalCenterTitle"><%= duck.name %></h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <%= cl_image_tag duck.photo.key, height: 400, width: 330, crop: :fill %>
@@ -37,7 +37,7 @@
         <% end %>        
       </div>
       <div class="modal-footer justify-content-around">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save</button>
       </div>
     </div>
