--- a/app/views/ducks/index.html.erb
+++ b/app/views/ducks/index.html.erb
@@ -12,7 +12,7 @@
       <%= render "ducks/show", duck: duck %>
       <div class="col-md-6 d-flex">
         <div class="card card-body">
-          <div class="d-flex flex-column h-100 justify-content-between" data-toggle="modal" data-target="#duckModal<%= duck.id %>">
+          <div class="d-flex flex-column h-100 justify-content-between" data-bs-toggle="modal" data-bs-target="#duckModal<%= duck.id %>">
             <h5 class="card-title"><strong><%= duck.name %></strong></h5>
             <p><%= cl_image_tag duck.photo.key, class:"card-text", height: 300, width: 250, crop: :fill %></p>
             <p class="card-text"><strong>Price per day:</strong> <%= duck.price %>€</p>
