Tests inline js

--- a/app/views/ducks/index.html.erb
+++ b/app/views/ducks/index.html.erb
@@ -12,11 +12,11 @@
       <%= render "ducks/show", duck: duck %>
       <div class="col-md-6 d-flex">
         <div class="card card-body">
-          <div class="d-flex flex-column h-100 justify-content-between" data-bs-toggle="modal" data-bs-target="#duckModal<%= duck.id %>">
+          <div class="d-flex flex-column h-100 justify-content-between duck-modal" data-bs-toggle="modal" data-bs-target="#duckModal<%= duck.id %>">
             <h5 class="card-title"><strong><%= duck.name %></strong></h5>
             <p><%= cl_image_tag duck.photo.key, class:"card-text", height: 300, width: 250, crop: :fill %></p>
             <p class="card-text"><strong>Price per day:</strong> <%= duck.price %>€</p>
-            <a href="#" class="btn btn-primary w-40 align-self-center">Book A Duck</a>
+            <a href="http://www.google.com" onclick="event.stopPropagation()" class="booking btn btn-primary w-40 align-self-center">Book A Duck</a>
           </div>
         </div>
       </div>
